@@ -21,26 +21,37 @@ import com.google.api.services.sheets.v4.model.RowData;
 import com.google.api.services.sheets.v4.model.Sheet;
 import com.google.api.services.sheets.v4.model.Spreadsheet;
 import org.dvidal.alexios.api.BookProcessor;
+import org.jetbrains.annotations.Contract;
+import org.jetbrains.annotations.NotNull;
 
-import java.io.File;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.PrintStream;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 
 import static org.dvidal.alexios.google.GoogleUtils.*;
 
+/**
+ * Book processor for PDT710 data importation.To see the full spec visit
+ * <a href="https://renta.sunat.gob.pe/empresas/herramientas-para-la-declaracion-formulario-virtual-710">
+ * SUNAT PDT 710 microsite</a>.
+ *
+ * @author InfoYupay SACS
+ * @version 1.0
+ */
 public final class PDTProcessor implements BookProcessor {
 
+    @Contract(pure = true)
     @Override
-    public String title() {
+    public @NotNull String title() {
         return "PDT 710 - Renta Anual";
     }
 
     @Override
-    public void processSheet(Spreadsheet spreadsheet, File target) throws Exception {
+    public void processSheet(Spreadsheet spreadsheet, Path target) throws Exception {
         var data = firstGridByName("030000", spreadsheet);
         var params = new PDTParams(
                 stringAt(data, 4, 1),
@@ -55,11 +66,25 @@ public final class PDTProcessor implements BookProcessor {
         doTrial031700(firstSheetByName("031700", spreadsheet), params, target);
     }
 
-    private BigDecimal getLimit(BigDecimal uit) {
+    /**
+     * Computes a limit (threshold) to group some items using the UIT rate as a reference.
+     *
+     * @param uit the UIT rate value.
+     * @return the value of 2 UIT (the limit established when this implementation was written).
+     */
+    private @NotNull BigDecimal getLimit(@NotNull BigDecimal uit) {
         return uit.multiply(new BigDecimal(2)).setScale(2, RoundingMode.HALF_UP);
     }
 
-    private void do030300(Sheet aSheet, PDTParams params, File target) throws IOException {
+    /**
+     * Executes the receivable accounts (12 and 13) from LE0303 book.
+     *
+     * @param aSheet the sheet objects.
+     * @param params parameters to perform duty.
+     * @param target the target output folder path.
+     * @throws IOException if unable to write.
+     */
+    private void do030300(Sheet aSheet, PDTParams params, Path target) throws IOException {
         if (!readInfoFlag(aSheet)) return;
 
         writeToFile(aSheet,
@@ -80,7 +105,15 @@ public final class PDTProcessor implements BookProcessor {
         );
     }
 
-    private void do030500(Sheet aSheet, PDTParams params, File target) throws IOException {
+    /**
+     * Executes the receivable accounts (16 and 17) from LE0305 book.
+     *
+     * @param aSheet the sheet objects.
+     * @param params parameters to perform duty.
+     * @param target the target output folder path.
+     * @throws IOException if unable to write.
+     */
+    private void do030500(Sheet aSheet, PDTParams params, Path target) throws IOException {
         if (!readInfoFlag(aSheet)) return;
 
         writeToFile(aSheet,
@@ -102,7 +135,15 @@ public final class PDTProcessor implements BookProcessor {
         );
     }
 
-    private void do030600(Sheet aSheet, PDTParams params, File target) throws IOException {
+    /**
+     * Executes the doubtful account from LE0306 book.
+     *
+     * @param aSheet the sheet objects.
+     * @param params parameters to perform duty.
+     * @param target the target output folder path.
+     * @throws IOException if unable to write.
+     */
+    private void do030600(Sheet aSheet, PDTParams params, Path target) throws IOException {
         if (!readInfoFlag(aSheet)) return;
         writeToFile(aSheet,
                 params,
@@ -115,7 +156,15 @@ public final class PDTProcessor implements BookProcessor {
         );
     }
 
-    private void do031200(Sheet aSheet, PDTParams params, File target) throws IOException {
+    /**
+     * Executes the payable accounts (42 and 43) from LE0312 book.
+     *
+     * @param aSheet the sheet objects.
+     * @param params parameters to perform duty.
+     * @param target the target output folder path.
+     * @throws IOException if unable to write.
+     */
+    private void do031200(Sheet aSheet, PDTParams params, Path target) throws IOException {
         if (!readInfoFlag(aSheet)) return;
         writeToFile(aSheet,
                 params,
@@ -135,7 +184,15 @@ public final class PDTProcessor implements BookProcessor {
         );
     }
 
-    private void do031300(Sheet aSheet, PDTParams params, File target) throws IOException {
+    /**
+     * Executes the payable accounts (46 and 47) from LE0313 book.
+     *
+     * @param aSheet the sheet objects.
+     * @param params parameters to perform duty.
+     * @param target the target output folder path.
+     * @throws IOException if unable to write.
+     */
+    private void do031300(Sheet aSheet, PDTParams params, Path target) throws IOException {
         writeToFile(aSheet,
                 params,
                 407,
@@ -152,20 +209,28 @@ public final class PDTProcessor implements BookProcessor {
                 target);
     }
 
-    private void doTrial031700(Sheet aSheet, PDTParams params, File target) throws IOException {
+    /**
+     * Executes the trial balance from LE0317 book.
+     *
+     * @param aSheet the sheet objects.
+     * @param params parameters to perform duty.
+     * @param target the target output folder path.
+     * @throws IOException if unable to write.
+     */
+    private void doTrial031700(Sheet aSheet, PDTParams params, Path target) throws IOException {
         if (!readInfoFlag(aSheet)) return;
-        var output = new File(target, new TrialNameCompiler(params).get());
+        var output = target.resolve(new TrialNameCompiler(params).get());
         recreateFile(output);
-        try (var fos = new FileOutputStream(output);
+        try (var fos = Files.newOutputStream(output);
              var ps = new PrintStream(fos, true, StandardCharsets.UTF_8)) {
-            aSheet.getData().get(0)
+            aSheet.getData().getFirst()
                     .getRowData()
                     .stream()
                     .skip(3)
                     .map(RowData::getValues)
                     .filter(ignoreBlank())
-                    .filter(c -> !c.get(0).getFormattedValue().strip().equals("89"))
-                    .map(new TrialProcessor())
+                    .filter(c -> !c.getFirst().getFormattedValue().strip().equals("89"))
+                    .map(new TrialConverter())
                     .forEach(ps::print);
         }
     }
@@ -192,7 +257,7 @@ public final class PDTProcessor implements BookProcessor {
                              int flagIndex,
                              String flag,
                              PDTFieldProcessor fieldProcessor,
-                             File target
+                             Path target
     ) throws IOException {
         writeToFile(aSheet, params, false, fieldNum, flagIndex, flag, fieldProcessor, target);
     }
@@ -216,18 +281,18 @@ public final class PDTProcessor implements BookProcessor {
      * then the header skip parameter may be required. That paremeter was to state
      * how many rows were header decorations and, thus, should be skipped from reading.
      */
-    private void writeToFile(Sheet aSheet,
-                             PDTParams params,
+    private void writeToFile(@NotNull Sheet aSheet,
+                             @NotNull PDTParams params,
                              boolean checkAbs,
                              int fieldNum,
                              int flagIndex,
                              String flag,
                              PDTFieldProcessor fieldProcessor,
-                             File target
+                             Path target
     ) throws IOException {
 
         //1. Collect data from sheet in buffer using .
-        var buffer = aSheet.getData().get(0)
+        var buffer = aSheet.getData().getFirst()
                 .getRowData().stream()
                 .skip(5)
                 .map(RowData::getValues)
@@ -238,12 +303,12 @@ public final class PDTProcessor implements BookProcessor {
         if (buffer.isEmpty()) return;
 
         //2. Check and delete output file.
-        var output = new File(target,
+        var output = target.resolve(
                 new PDT710NameCompiler(params.year(), params.ruc(), fieldNum).get());
         recreateFile(output);
 
         //3. Open to write.
-        try (var fos = new FileOutputStream(output);
+        try (var fos = Files.newOutputStream(output);
              var ps = new PrintStream(fos, true, StandardCharsets.UTF_8)) {
             //4. For each item, print.
             buffer.forEach(ps::print);
@@ -251,6 +316,15 @@ public final class PDTProcessor implements BookProcessor {
         //Algorythm end.
     }
 
+    /**
+     * Inner record to hold the required parameters to perform duties.
+     *
+     * @param ruc  the tax payer ID.
+     * @param year taxable year of reports.
+     * @param uit  the uit rate value.
+     * @author InfoYupay SACS
+     * @version 1.0
+     */
     record PDTParams(String ruc, String year, BigDecimal uit) {
     }
 }
